Added more information about my projects

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/nanos-heightmap.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/nanos-world-04.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>nanos world</h4>
@@ -377,7 +377,7 @@
                   <h4 class="subheading">Internship at CI&T</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">CI&T is a nearshore information technology and software engineering company. Where I did my first Internship working with insurance companies softwares.</p>
+                  <p class="text-muted">CI&T is a nearshore information technology and software engineering company. Where I did my first Internship working on supporting insurance companies softwares.</p>
                 </div>
               </div>
             </li>
@@ -405,7 +405,7 @@
                   <h4 class="subheading">Internship at Tokenlab</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">Tokenlab is a specializated company in digital solutions.</p>
+                  <p class="text-muted">Tokenlab is a specializated company in digital solutions. Where I develop and work in two University's projects: DoeFUMCAD and Picolê.</p>
                 </div>
               </div>
             </li>
@@ -419,7 +419,7 @@
                   <h4 class="subheading">nanos world</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">nanos world is the next generation multiplayer sandbox game created.</p>
+                  <p class="text-muted">nanos world is the next generation multiplayer sandbox game created. Being the Lead Developer working on Network, Gameplay, Scripting, Optimizations, Technical Solutions and a bit of Animations and Artistics Design.</p>
                 </div>
               </div>
             </li>
@@ -627,7 +627,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-4">
-          <span class="copyright">Copyright &copy; Gabriel T. Nardy 2019</span>
+          <span class="copyright">Copyright &copy; Gabriel T. Nardy 2020</span>
         </div>
         <div class="col-md-4">
           <ul class="list-inline social-buttons">
@@ -691,7 +691,16 @@
                 <h2 class="text-uppercase">Estação Liberdade</h2>
                 <p class="item-intro text-muted">A short Horror/Thriller game developed in 24 hours that goes on a scary subway</p>
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/estacao-liberdade.png" alt="">
-                <p>Developed for a 24 hour Game Jam with Free Marketplace Assets using Unreal Engine 4.</p>
+				<h4>About:</h4>
+				<p>
+					Developed for a 24 hour University's Game Jam with Free Marketplace Assets using Unreal Engine 4. Which had a great success after it's release (4-Free on itch.io), having great YouTube personalities making gameplay videos.
+				</p>
+				<p>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/043Fa0TJGdQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/YXThYFCtgAg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/eRhZ5sp5cvE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/VjpT5xuBC5w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</p>
                 <ul class="list-inline">
                   <li>Release: September 2019</li>
                   <li>Site: <a href="https://gtnardy.itch.io/estacao-liberdade">https://gtnardy.itch.io/estacao-liberdade</a></li>
@@ -699,10 +708,15 @@
                   <li>Client: Threads</li>
                   <li>Category: Illustration</li>
                   -->
-                </ul>
+				</ul>
+				<h4>Obtained Experiences:</h4>
+				<p>
+					<b>Unreal Engine 4 - Blueprint Programming</b> <br>
+				</p>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
-                  <i class="fas fa-times"></i>
-                  Close Project</button>
+					<i class="fas fa-times"></i>
+					Close Project
+				</button>
               </div>
             </div>
           </div>
@@ -726,17 +740,18 @@
               <div class="modal-body">
                 <!-- Project Details Go Here -->
                 <h2 class="text-uppercase">Just Cause 3 - Roleplay</h2>
-                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                <p class="item-intro text-muted">A modification for Just Cause 3 - Multiplayer with Roleplay gameplay</p>
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/justcauserp.png" alt="">
+				<h4>About:</h4>
                 <p>
-                  Opened in the middle of 2017, we had the task of creating a complete roleplay server, modeling it into a giant similar to the olds SA-MP Roleplay servers. With the help of all community, we were adding aspects of other games like MTA, ARMA and GTA:V to however have the largest Roleplay server ever!
+					Opened in the middle of 2017, we had the task of creating a complete roleplay server, modeling it into a giant similar to the olds SA-MP Roleplay servers. With the help of all community, we were adding aspects of other games like MTA, ARMA and GTA:V aiming the best Roleplay experience ever!
                 </p>
                 <p>
-                  Begin from ZERO: get jobs; be promoted; level up; buy houses and stuff; become the tycoon; customize your vehicle at Pay'n Spray; run away from the police; arrest bandits and rebels; dominate military bases; play with friend and MUCH MORE!
-                </p>
-                <p>
-                  What you can expect from the server: Custom Jobs, Player-made Races (with a Race Creator), Leveling-up and Money Systems, Buyable Houses, Hunger and Thirst Necessities, Fuel System (with functional Gas Stations), Weapon Store, Wanted Levels System, Police/Military/Rebels Jobs and much more! 
-                </p>
+					Begin from ZERO: get jobs; be promoted; level up; buy houses and stuff; become the tycoon; customize your vehicle at Pay'n Spray; run away from the police; arrest bandits and rebels; dominate military bases; play with friend and MUCH MORE!
+				</p>
+				<p>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/Q7kUsvgiljs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</p>
                 <ul class="list-inline">
                   <li>Date: 2014 - Today</li>
                   <li>Site: <a href="http://justcauserp.com">http://justcauserp.com</a></li>
@@ -745,6 +760,13 @@
                   <li>Category: Graphic Design</li>
                   -->
                 </ul>
+				<h4>Obtained Experiences:</h4>
+				<p>
+					<b>Scripting Programming (Node.js + JavaScript)</b> - for developing the whole gameplay mechanics <br>
+					<b>Front-End Programming (HTML + CSS + JavaScript)</b> - for developing the whole game UI/UX <br>
+					<b>Database (MySQL)</b> - for storing and managing all game data (from players and their progress) <br>
+					<b>Community Management</b> (in other languages than my native one) <br>
+				</p>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
                   Close Project</button>
@@ -772,12 +794,28 @@
                 <!-- Project Details Go Here -->
                 <h2 class="text-uppercase">nanos world</h2>
                 <p class="item-intro text-muted">Next generation multiplayer sandbox game</p>
-                <img class="img-fluid d-block mx-auto" src="img/portfolio/nanos-world2.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/nanos-world.png" alt="">
                 <p>
-                  nanos world is the next generation multiplayer sandbox game created by you and nanos. We do this by allowing players, developers and modders themselves to build their own game upon and to integrate their work in nanos world. Built upon Unreal Engine 4 (UE4), nanos framework and our experience, especially from Just Cause 3: Multiplayer, you can turn your world into whatever you’d like. Bringing all participants to the table, players can join thousands of different worlds and thousands of different game modes with only one game and everybody can contribute to our common project.
+					nanos world is the next generation multiplayer sandbox game created by you and nanos. We do this by allowing players, developers and modders themselves to build their own game upon and to integrate their work in nanos world. Built upon Unreal Engine 4 (UE4), nanos framework and our experience, especially from Just Cause 3: Multiplayer and other modifications we created, you can turn your world into whatever you’d like. Bringing all participants to the table, players can join thousands of different worlds and thousands of different game modes with only one game and everybody can contribute to our common project. 
                 </p>
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/nanos-world-01.png" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/nanos-world-02.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/nanos-world-03.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/nanos-world-04.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/nanos-world-05.jpg" alt="">
+				<img class="img-fluid d-block mx-auto" src="img/portfolio/nanos-world-06.png" alt="">
+				<h4>Obtained Experiences:</h4>
+				<p>
+					<b>Deep C++ Programming</b> - For Development using Unreal Engine 4 and Network layer.<br>
+					<b>Networking</b> - Using Valve's Network Sockets library, used for developing our Network/Multiplayer Layer, granting all game sync and multiplayer features without imperfections.<br>
+					<b>Scripting Language (Lua)</b> - Used for allowing players to script their own gamemodes.<br>
+					<b>Game Development</b> - Since Game Design to overall Technical Game's Architecture, as well experiences on workflows with <b>Skeletons/Animations</b>, <b>Assets/Meshes</b>, <b>Optimizations</b> (on GPU and CPU, including thread usage), <b>Rendering Pipelines</b> (from CPU to GPU to render a frame).<br>
+					And more specific subsystems as: <b>Weaponry Mechanics</b> (Shooting, Aiming/ADS, Reloading, Damaging), <b>Player's Interactions with world and objects</b> (grabbing, opening doors, entering vehicles), <b>General Movements</b>, <b>True First Person</b> (with True Weapon ADSs - i.e.: not using two animations for first or third person vision).<br>
+					<b>Community Management</b>.<br>
+					<b>Automations (CI/CD)</b> (using Git's pipelines to auto build and auto deploy the game on itch.io, with versioning).
+				</p>
                 <ul class="list-inline">
-                  <li>Release: TBD</li>
+                  <li>Release: TBD (currently in closed testing)</li>
                   <li>Site: <a href="https://nanos.world/">https://nanos.world/<a></li>
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
@@ -839,14 +877,15 @@
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-                <h2 class="text-uppercase">Project Name</h2>
-                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                <h2 class="text-uppercase">Flappy Cow</h2>
+                <p class="item-intro text-muted">A reimagination of the famous Flappy Bird</p>
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/05-full.jpg" alt="">
-                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+				<p>Flappy Cow was a game developed during a C++ Class in University.</p>
+				<p>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/AUgmybG03lc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</p>
                 <ul class="list-inline">
-                  <li>Date: January 2017</li>
-                  <li>Client: Southwest</li>
-                  <li>Category: Website Design</li>
+                  <li>Date: 2017</li>
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
