--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <div class="intro-text">
         <div class="intro-lead-in">Welcome to my Personal Page!</div>
         <div class="intro-heading text-uppercase">It's Nice To Meet You</div>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Check out my work!</a>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#portfolio">Check out my work!</a>
       </div>
     </div>
   </header>
