fixed itch link

--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://www.itch.io/gtnardy/">
+              <a href="https://gtnardy.itch.io/">
                 <i class="fab fa-itch-io"></i>
               </a>
             </li>
