Added video and improvements on size

--- a/index.html
+++ b/index.html
@@ -696,10 +696,10 @@
 					Developed for a 24 hour University's Game Jam with Free Marketplace Assets using Unreal Engine 4. Which had a great success after it's release (4-Free on itch.io), having great YouTube personalities making gameplay videos.
 				</p>
 				<p>
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/043Fa0TJGdQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/YXThYFCtgAg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/eRhZ5sp5cvE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/VjpT5xuBC5w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<iframe width="100%" height="385" src="https://www.youtube.com/embed/043Fa0TJGdQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<iframe width="100%" height="385" src="https://www.youtube.com/embed/YXThYFCtgAg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<iframe width="100%" height="385" src="https://www.youtube.com/embed/eRhZ5sp5cvE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<iframe width="100%" height="385" src="https://www.youtube.com/embed/VjpT5xuBC5w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				</p>
                 <ul class="list-inline">
                   <li>Release: September 2019</li>
@@ -750,7 +750,7 @@
 					Begin from ZERO: get jobs; be promoted; level up; buy houses and stuff; become the tycoon; customize your vehicle at Pay'n Spray; run away from the police; arrest bandits and rebels; dominate military bases; play with friend and MUCH MORE!
 				</p>
 				<p>
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/Q7kUsvgiljs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<iframe width="100%" height="385" src="https://www.youtube.com/embed/Q7kUsvgiljs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				</p>
                 <ul class="list-inline">
                   <li>Date: 2014 - Today</li>
@@ -794,10 +794,12 @@
                 <!-- Project Details Go Here -->
                 <h2 class="text-uppercase">nanos world</h2>
                 <p class="item-intro text-muted">Next generation multiplayer sandbox game</p>
-                <img class="img-fluid d-block mx-auto" src="img/portfolio/nanos-world.png" alt="">
+				<p>
+					<iframe width="100%" height="385" src="https://www.youtube.com/embed/_lkKTUaZ-aQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</p>
                 <p>
 					nanos world is the next generation multiplayer sandbox game created by you and nanos. We do this by allowing players, developers and modders themselves to build their own game upon and to integrate their work in nanos world. Built upon Unreal Engine 4 (UE4), nanos framework and our experience, especially from Just Cause 3: Multiplayer and other modifications we created, you can turn your world into whatever you’d like. Bringing all participants to the table, players can join thousands of different worlds and thousands of different game modes with only one game and everybody can contribute to our common project. 
-                </p>
+				</p>
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/nanos-world-01.png" alt="">
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/nanos-world-02.jpg" alt="">
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/nanos-world-03.jpg" alt="">
@@ -882,7 +884,7 @@
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/05-full.jpg" alt="">
 				<p>Flappy Cow was a game developed during a C++ Class in University.</p>
 				<p>
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/AUgmybG03lc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<iframe width="100%" height="385" src="https://www.youtube.com/embed/AUgmybG03lc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				</p>
                 <ul class="list-inline">
                   <li>Date: 2017</li>
