--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 						<img class="img-fluid" src="img/portfolio/estacao-liberdade.png" alt="">
 					</a>
 					<div class="portfolio-caption">
-						<h4>Estação Liberdade</h4>
+						<h5>Estação Liberdade</h5>
 						<p class="text-muted">A short Horror/Thriller game developed in 24 hours that goes on a scary subway</p>
 					</div>
 				</div>
@@ -147,28 +147,29 @@
 								<i class="fas fa-plus fa-3x"></i>
 							</div>
 						</div>
-						<img class="img-fluid" src="img/portfolio/nanos-world-04.jpg" alt="">
+						<img class="img-fluid" src="img/portfolio/nanos-world-03.jpg" alt="">
 					</a>
 					<div class="portfolio-caption">
-						<h4>nanos world</h4>
+						<h5>nanos world</h5>
 						<p class="text-muted">Next generation multiplayer sandbox game</p>
 					</div>
-				</div>	
-				<div class="col-md-4 col-sm-6 portfolio-item">
+				</div>
+
+				<div class="col-md-3 col-sm-6 portfolio-item">
 					<a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
 						<div class="portfolio-hover">
 							<div class="portfolio-hover-content">
 								<i class="fas fa-plus fa-3x"></i>
 							</div>
 						</div>
-						<img class="img-fluid" src="img/portfolio/justcauserp.png" alt="">
+						<img class="img-fluid" src="img/portfolio/jc3rp-01.jpg" alt="">
 					</a>
 					<div class="portfolio-caption">
-						<h4>Just Cause 3 - Roleplay</h4>
+						<h6>Just Cause 3 - Roleplay</h6>
 						<p class="text-muted">A modification for Just Cause 3 - Multiplayer with Roleplay gameplay</p>
 					</div>
 				</div>			
-				<div class="col-md-4 col-sm-6 portfolio-item">
+				<div class="col-md-3 col-sm-6 portfolio-item">
 					<a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
 						<div class="portfolio-hover">
 							<div class="portfolio-hover-content">
@@ -178,39 +179,39 @@
 						<img class="img-fluid" src="img/portfolio/bowmaster-realm_02.png" alt="">
 					</a>
 					<div class="portfolio-caption">
-						<h5>Bowmaster Realm</h5>
+						<h6>Bowmaster Realm</h6>
 						<p class="text-muted">A Bowmaster Prelude recriation made in Unreal with sprites</p>
 					</div>
 				</div>
-				<div class="col-md-4 col-sm-6 portfolio-item">
+				<div class="col-md-3 col-sm-6 portfolio-item">
 					<a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
 						<div class="portfolio-hover">
 							<div class="portfolio-hover-content">
 								<i class="fas fa-plus fa-3x"></i>
 							</div>
 						</div>
-						<img class="img-fluid" src="img/portfolio/flappy-cow.png" alt="">
+						<img class="img-fluid" src="img/portfolio/flappy-cow.jpg" alt="">
 					</a>
 					<div class="portfolio-caption">
-						<h5>Flappy Cow</h5>
-						<p class="text-muted">Developed for a University class using C#</p>
+						<h6>Flappy Cow</h6>
+						<p class="text-muted">Developed for a University class using C++</p>
 					</div>
 				</div>
-				<div class="col-md-4 col-sm-6 portfolio-item">
+				<div class="col-md-3 col-sm-6 portfolio-item">
 					<a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
 						<div class="portfolio-hover">
 							<div class="portfolio-hover-content">
 								<i class="fas fa-plus fa-3x"></i>
 							</div>
 						</div>
-						<img class="img-fluid" src="img/portfolio/the-seller.png" alt="">
+						<img class="img-fluid" src="img/portfolio/the-seller.jpg" alt="">
 					</a>
 					<div class="portfolio-caption">
-						<h5>The Seller - An unexpected price</h5>
-						<p class="text-muted">Developed for a University class using C#</p>
+						<h6>The Seller - An unexpected price</h6>
+						<p class="text-muted">Developed for a University class using C++</p>
 					</div>
 				</div>
-				<div class="col-md-4 col-sm-6 portfolio-item">
+				<!-- <div class="col-md-4 col-sm-6 portfolio-item">
 					<a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
 						<div class="portfolio-hover">
 							<div class="portfolio-hover-content">
@@ -220,19 +221,19 @@
 						<img class="img-fluid" src="img/portfolio/brasilroleplay.png" alt="">
 					</a>
 					<div class="portfolio-caption">
-						<h5>Just Cause 2 - Brasil Roleplay</h5>
+						<h6>Just Cause 2 - Brasil Roleplay</h6>
 						<p class="text-muted">The first Roleplay i've created</p>
 					</div>
-				</div>
-				<div class="col-md-4 col-sm-3 portfolio-item">
-					<a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
+				</div> -->
+				<div class="col-md-3 col-sm-3 portfolio-item">
+					<!-- <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6"> -->
 						<div class="portfolio-hover">
 							<div class="portfolio-hover-content">
-								<i class="fas fa-plus fa-3x"></i>
+								<!-- <i class="fas fa-plus fa-3x"></i> -->
 							</div>
 						</div>
 						<img class="img-fluid" src="img/portfolio/flascii.png" alt="">
-					</a>
+					<!-- </a> -->
 					<div class="portfolio-caption">
 						<h6>FLASCII BIRD</h6>
 						<p class="text-muted">A(nother) Flappy Bird recriation made in Assembly</p>
@@ -254,44 +255,44 @@
 			</div>
 			<div class="row">
 				<div class="col-md-4 col-sm-6 portfolio-item">
-					<a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
+					<!-- <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1"> -->
 						<div class="portfolio-hover">
 							<div class="portfolio-hover-content">
-								<i class="fas fa-plus fa-3x"></i>
+								<!-- <i class="fas fa-plus fa-3x"></i> -->
 							</div>
 						</div>
-						<img class="img-fluid" src="img/portfolio/fumcad.png" alt="">
-					</a>
+						<img class="img-fluid" src="img/portfolio/fumcad.jpg" alt="">
+					<!-- </a> -->
 					<div class="portfolio-caption">
-						<h4>DoeFUMCAD</h4>
+						<h5>DoeFUMCAD</h5>
 						<p class="text-muted">DoeFUMCAD is a site/app to make it easier for residents to donate to their city's charitable funds</p>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-6 portfolio-item">
-					<a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
+					<!-- <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2"> -->
 						<div class="portfolio-hover">
 							<div class="portfolio-hover-content">
-								<i class="fas fa-plus fa-3x"></i>
+								<!-- <i class="fas fa-plus fa-3x"></i> -->
 							</div>
 						</div>
 						<img class="img-fluid" src="img/portfolio/futmesapro.jpg" alt="">
-					</a>
+					<!-- </a> -->
 					<div class="portfolio-caption">
-						<h4>Futmesa PRO</h4>
+						<h5>Futmesa PRO</h5>
 						<p class="text-muted">An app to follow matches, standings and scorers of São Paulo Button Futeball Club Championship</p>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-6 portfolio-item">
-					<a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
+					<!-- <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4"> -->
 						<div class="portfolio-hover">
 							<div class="portfolio-hover-content">
-								<i class="fas fa-plus fa-3x"></i>
+								<!-- <i class="fas fa-plus fa-3x"></i> -->
 							</div>
 						</div>
-						<img class="img-fluid" src="img/portfolio/picole.png" alt="">
-					</a>
+						<img class="img-fluid" src="img/portfolio/picole.jpg" alt="">
+					<!-- </a> -->
 					<div class="portfolio-caption">
-						<h4>Picole</h4>
+						<h5>Picole</h5>
 						<p class="text-muted">An application for teaching intellectual disabilities with games</p>
 					</div>
 				</div>
@@ -359,7 +360,7 @@
 							</div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h4>2018 - Today</h4>
+									<h4>2018 - 2020</h4>
 									<h4 class="subheading">Internship at Tokenlab</h4>
 								</div>
 								<div class="timeline-body">
