--- a/index.html
+++ b/index.html
@@ -810,12 +810,16 @@
 							<div class="modal-body">
 								<!-- Project Details Go Here -->
 								<h2 class="text-uppercase">Project Name</h2>
-								<p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+								<p class="item-intro text-muted">Game developed while starting learning UE4</p>
 								<img class="img-fluid d-block mx-auto" src="img/portfolio/04-full.jpg" alt="">
 								<iframe width="100%" height="385" src="https://www.youtube.com/embed/9mkFKYII6d8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+								<ul class="list-inline">
+									<li>Date: 2018</li>
+								</ul>
 								<button class="btn btn-primary" data-dismiss="modal" type="button">
 									<i class="fas fa-times"></i>
-									Close Project</button>
+									Close Project
+								</button>
 							</div>
 						</div>
 					</div>
@@ -841,16 +845,17 @@
 								<h2 class="text-uppercase">Flappy Cow</h2>
 								<p class="item-intro text-muted">A reimagination of the famous Flappy Bird</p>
 								<img class="img-fluid d-block mx-auto" src="img/portfolio/05-full.jpg" alt="">
-				<p>Flappy Cow was a game developed during a C++ Class in University.</p>
-				<p>
-					<iframe width="100%" height="385" src="https://www.youtube.com/embed/AUgmybG03lc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-				</p>
+								<p>Flappy Cow was a game developed during a C++ Class in University.</p>
+								<p>
+									<iframe width="100%" height="385" src="https://www.youtube.com/embed/AUgmybG03lc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+								</p>
 								<ul class="list-inline">
 									<li>Date: 2017</li>
 								</ul>
 								<button class="btn btn-primary" data-dismiss="modal" type="button">
 									<i class="fas fa-times"></i>
-									Close Project</button>
+									Close Project
+								</button>
 							</div>
 						</div>
 					</div>
@@ -873,18 +878,20 @@
 						<div class="col-lg-8 mx-auto">
 							<div class="modal-body">
 								<!-- Project Details Go Here -->
-								<h2 class="text-uppercase">Project Name</h2>
-								<p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-								<img class="img-fluid d-block mx-auto" src="img/portfolio/06-full.jpg" alt="">
-								<p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+								<h2 class="text-uppercase">Flappy Cow</h2>
+								<p class="item-intro text-muted">A creation based on my candies's selling at university</p>
+								<img class="img-fluid d-block mx-auto" src="img/portfolio/05-full.jpg" alt="">
+								<p>The Seller was a game developed during a C++ Class in University.</p>
+								<p>
+									<iframe width="100%" height="385" src="https://www.youtube.com/embed/d0EpMJzi9Zg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+								</p>
 								<ul class="list-inline">
-									<li>Date: January 2017</li>
-									<li>Client: Window</li>
-									<li>Category: Photography</li>
+									<li>Date: 2017</li>
 								</ul>
 								<button class="btn btn-primary" data-dismiss="modal" type="button">
 									<i class="fas fa-times"></i>
-									Close Project</button>
+									Close Project
+								</button>
 							</div>
 						</div>
 					</div>
