--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 								<i class="fas fa-plus fa-3x"></i>
 							</div>
 						</div>
-						<img class="img-fluid" src="img/portfolio/estacao-liberdade.png" alt="">
+						<img class="img-fluid" src="img/portfolio/estacao-liberdade.jpg" alt="">
 					</a>
 					<div class="portfolio-caption">
 						<h5>Estação Liberdade</h5>
@@ -176,7 +176,7 @@
 								<i class="fas fa-plus fa-3x"></i>
 							</div>
 						</div>
-						<img class="img-fluid" src="img/portfolio/bowmaster-realm_02.png" alt="">
+						<img class="img-fluid" src="img/portfolio/bowmaster-realm_02.jpg" alt="">
 					</a>
 					<div class="portfolio-caption">
 						<h6>Bowmaster Realm</h6>
@@ -218,7 +218,7 @@
 								<i class="fas fa-plus fa-3x"></i>
 							</div>
 						</div>
-						<img class="img-fluid" src="img/portfolio/brasilroleplay.png" alt="">
+						<img class="img-fluid" src="img/portfolio/brasilroleplay.jpg" alt="">
 					</a>
 					<div class="portfolio-caption">
 						<h6>Just Cause 2 - Brasil Roleplay</h6>
@@ -232,7 +232,7 @@
 								<!-- <i class="fas fa-plus fa-3x"></i> -->
 							</div>
 						</div>
-						<img class="img-fluid" src="img/portfolio/flascii.png" alt="">
+						<img class="img-fluid" src="img/portfolio/flascii.jpg" alt="">
 					<!-- </a> -->
 					<div class="portfolio-caption">
 						<h6>FLASCII BIRD</h6>
@@ -370,7 +370,7 @@
 						</li>
 						<li>
 							<div class="timeline-image">
-								<img class="rounded-circle img-fluid" src="img/about/nanos-world.png" alt="">
+								<img class="rounded-circle img-fluid" src="img/about/nanos-world.jpg" alt="">
 							</div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
@@ -654,7 +654,7 @@
 								<!-- Project Details Go Here -->
 								<h2 class="text-uppercase">Estação Liberdade</h2>
 								<p class="item-intro text-muted">A short Horror/Thriller game developed in 24 hours that goes on a scary subway</p>
-								<img class="img-fluid d-block mx-auto" src="img/portfolio/estacao-liberdade.png" alt="">
+								<img class="img-fluid d-block mx-auto" src="img/portfolio/estacao-liberdade.jpg" alt="">
 				<h4>About:</h4>
 				<p>
 					Developed for a 24 hour University's Game Jam with Free Marketplace Assets using Unreal Engine 4. Which had a great success after it's release (4-Free on itch.io), having great YouTube personalities making gameplay videos.
@@ -705,7 +705,7 @@
 								<!-- Project Details Go Here -->
 								<h2 class="text-uppercase">Just Cause 3 - Roleplay</h2>
 								<p class="item-intro text-muted">A modification for Just Cause 3 - Multiplayer with Roleplay gameplay</p>
-								<img class="img-fluid d-block mx-auto" src="img/portfolio/justcauserp.png" alt="">
+								<img class="img-fluid d-block mx-auto" src="img/portfolio/justcauserp.jpg" alt="">
 				<h4>About:</h4>
 								<p>
 					Opened in the middle of 2017, we had the task of creating a complete roleplay server, modeling it into a giant similar to the olds SA-MP Roleplay servers. With the help of all community, we were adding aspects of other games like MTA, ARMA and GTA:V aiming the best Roleplay experience ever!
@@ -758,28 +758,28 @@
 								<!-- Project Details Go Here -->
 								<h2 class="text-uppercase">nanos world</h2>
 								<p class="item-intro text-muted">Next generation multiplayer sandbox game</p>
-				<p>
-					<iframe width="100%" height="385" src="https://www.youtube.com/embed/_lkKTUaZ-aQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-				</p>
 								<p>
-					nanos world is the next generation multiplayer sandbox game created by you and nanos. We do this by allowing players, developers and modders themselves to build their own game upon and to integrate their work in nanos world. Built upon Unreal Engine 4 (UE4), nanos framework and our experience, especially from Just Cause 3: Multiplayer and other modifications we created, you can turn your world into whatever you’d like. Bringing all participants to the table, players can join thousands of different worlds and thousands of different game modes with only one game and everybody can contribute to our common project. 
-				</p>
-								<img class="img-fluid d-block mx-auto" src="img/portfolio/nanos-world-01.png" alt="">
+									<iframe width="100%" height="385" src="https://www.youtube.com/embed/_lkKTUaZ-aQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+								</p>
+												<p>
+									nanos world is the next generation multiplayer sandbox game created by you and nanos. We do this by allowing players, developers and modders themselves to build their own game upon and to integrate their work in nanos world. Built upon Unreal Engine 4 (UE4), nanos framework and our experience, especially from Just Cause 3: Multiplayer and other modifications we created, you can turn your world into whatever you’d like. Bringing all participants to the table, players can join thousands of different worlds and thousands of different game modes with only one game and everybody can contribute to our common project. 
+								</p>
+								<img class="img-fluid d-block mx-auto" src="img/portfolio/nanos-world-01.jpg" alt="">
 								<img class="img-fluid d-block mx-auto" src="img/portfolio/nanos-world-02.jpg" alt="">
 								<img class="img-fluid d-block mx-auto" src="img/portfolio/nanos-world-03.jpg" alt="">
 								<img class="img-fluid d-block mx-auto" src="img/portfolio/nanos-world-04.jpg" alt="">
 								<img class="img-fluid d-block mx-auto" src="img/portfolio/nanos-world-05.jpg" alt="">
-				<img class="img-fluid d-block mx-auto" src="img/portfolio/nanos-world-06.png" alt="">
-				<h4>Obtained Experiences:</h4>
-				<p>
-					<b>Deep C++ Programming</b> - For Development using Unreal Engine 4 and Network layer.<br>
-					<b>Networking</b> - Using Valve's Network Sockets library, used for developing our Network/Multiplayer Layer, granting all game sync and multiplayer features without imperfections.<br>
-					<b>Scripting Language (Lua)</b> - Used for allowing players to script their own gamemodes.<br>
-					<b>Game Development</b> - Since Game Design to overall Technical Game's Architecture, as well experiences on workflows with <b>Skeletons/Animations</b>, <b>Assets/Meshes</b>, <b>Optimizations</b> (on GPU and CPU, including thread usage), <b>Rendering Pipelines</b> (from CPU to GPU to render a frame).<br>
-					And more specific subsystems as: <b>Weaponry Mechanics</b> (Shooting, Aiming/ADS, Reloading, Damaging), <b>Player's Interactions with world and objects</b> (grabbing, opening doors, entering vehicles), <b>General Movements</b>, <b>True First Person</b> (with True Weapon ADSs - i.e.: not using two animations for first or third person vision).<br>
-					<b>Community Management</b>.<br>
-					<b>Automations (CI/CD)</b> (using Git's pipelines to auto build and auto deploy the game on itch.io, with versioning).
-				</p>
+								<img class="img-fluid d-block mx-auto" src="img/portfolio/nanos-world-06.jpg" alt="">
+								<h4>Obtained Experiences:</h4>
+								<p>
+									<b>Deep C++ Programming</b> - For Development using Unreal Engine 4 and Network layer.<br>
+									<b>Networking</b> - Using Valve's Network Sockets library, used for developing our Network/Multiplayer Layer, granting all game sync and multiplayer features without imperfections.<br>
+									<b>Scripting Language (Lua)</b> - Used for allowing players to script their own gamemodes.<br>
+									<b>Game Development</b> - Since Game Design to overall Technical Game's Architecture, as well experiences on workflows with <b>Skeletons/Animations</b>, <b>Assets/Meshes</b>, <b>Optimizations</b> (on GPU and CPU, including thread usage), <b>Rendering Pipelines</b> (from CPU to GPU to render a frame).<br>
+									And more specific subsystems as: <b>Weaponry Mechanics</b> (Shooting, Aiming/ADS, Reloading, Damaging), <b>Player's Interactions with world and objects</b> (grabbing, opening doors, entering vehicles), <b>General Movements</b>, <b>True First Person</b> (with True Weapon ADSs - i.e.: not using two animations for first or third person vision).<br>
+									<b>Community Management</b>.<br>
+									<b>Automations (CI/CD)</b> (using Git's pipelines to auto build and auto deploy the game on itch.io, with versioning).
+								</p>
 								<ul class="list-inline">
 									<li>Release: TBD (currently in closed testing)</li>
 									<li>Site: <a href="https://nanos.world/">https://nanos.world/<a></li>
