--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
 						</li>
 						<li>
 							<div class="timeline-image">
-								<img class="rounded-circle img-fluid" src="img/about/nanos-world.jpg" alt="">
+								<img class="rounded-circle img-fluid" src="img/about/nanos-world.png" alt="">
 							</div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
